fix on small things & added title for recent work - JX

--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,15 @@ body {
   padding-left: 30px;
   padding-top: 5px;
 }
-
+.work-text{
+  width: 20rem;
+  display:flex;
+  justify-content: center;
+  padding-left: 16%;
+}
+.work-title{
+  color:#ffa45c;
+}
 /* For individual project page */
 .projectName {
   font-family: "Nota Sans", sans-serif;
